--- a/CurrencyConverter/Base.lproj/Main.storyboard
+++ b/CurrencyConverter/Base.lproj/Main.storyboard
@@ -1,24 +1,87 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="CurrencyConverter" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ezs-00-jle">
+                                <rect key="frame" x="170.5" y="44" width="73.5" height="37"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Conversion rate" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9pO-6t-Ub8">
+                                <rect key="frame" x="50" y="89" width="314" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Amount to be converted" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wCG-Mw-XVo">
+                                <rect key="frame" x="50" y="131" width="314" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
+                            </textField>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="0Si-eB-Pwb">
+                                <rect key="frame" x="169.5" y="173" width="75" height="32"/>
+                                <segments>
+                                    <segment title="💵"/>
+                                    <segment title="💴"/>
+                                </segments>
+                            </segmentedControl>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EAy-sN-CeT">
+                                <rect key="frame" x="173.5" y="211" width="67" height="31"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                <connections>
+                                    <action selector="convertTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gnZ-pY-w9R"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="9pO-6t-Ub8" firstAttribute="top" secondItem="Ezs-00-jle" secondAttribute="bottom" constant="8" symbolic="YES" id="32q-Tv-aJ0"/>
+                            <constraint firstItem="0Si-eB-Pwb" firstAttribute="top" secondItem="wCG-Mw-XVo" secondAttribute="bottom" constant="8" symbolic="YES" id="3yf-3j-sFD"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="9pO-6t-Ub8" secondAttribute="trailing" constant="50" id="48b-0S-MRR"/>
+                            <constraint firstItem="wCG-Mw-XVo" firstAttribute="top" secondItem="9pO-6t-Ub8" secondAttribute="bottom" constant="8" symbolic="YES" id="4hh-Ec-pNX"/>
+                            <constraint firstItem="9pO-6t-Ub8" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="7qX-Xd-YWs"/>
+                            <constraint firstItem="0Si-eB-Pwb" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="AY2-k6-aUX"/>
+                            <constraint firstItem="EAy-sN-CeT" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Dk5-yi-JlH"/>
+                            <constraint firstItem="wCG-Mw-XVo" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="FNT-vY-ZFh"/>
+                            <constraint firstItem="9pO-6t-Ub8" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="U5k-yv-oX5"/>
+                            <constraint firstItem="Ezs-00-jle" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="iGD-eW-1Z8"/>
+                            <constraint firstItem="EAy-sN-CeT" firstAttribute="top" secondItem="0Si-eB-Pwb" secondAttribute="bottom" constant="7" id="j8r-8E-NYW"/>
+                            <constraint firstItem="wCG-Mw-XVo" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="tcN-nr-bml"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="wCG-Mw-XVo" secondAttribute="trailing" constant="50" id="vZW-hZ-GpX"/>
+                            <constraint firstItem="Ezs-00-jle" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="xWr-nX-EkZ"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="amountTextField" destination="wCG-Mw-XVo" id="kPE-TA-FXq"/>
+                        <outlet property="currencySegment" destination="0Si-eB-Pwb" id="f2X-8X-VPy"/>
+                        <outlet property="label" destination="Ezs-00-jle" id="Sn8-HF-W6r"/>
+                        <outlet property="rateTextField" destination="9pO-6t-Ub8" id="2Ig-Jz-OXx"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="35" y="80"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
